Modifique el header

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <nav class="navegacion">
+        <nav id="navegacion">
             <a class="logo" href="#">CAC-Movies</a>
             <ul class="lista-menu">
                 <li class="item-menu"> <a class="link-menu" href="#tendencia">Tendencia</a> </li>
                 <li class="item-menu"><a class="link-menu" href="registro.html">Registrarse</a></li>
                 <li class="item-menu iniciosesion"><a class="link-menu" href="inicio_sesion.html">Inicio Sesión</a></li>
+                <li class="item-menu iniciosesion"><a class="link-menu" href="api.html">Conexión API</a></li>
             </ul>
         </nav>
     </header>
@@ -137,5 +138,7 @@
             <a class="flecha-arriba" href="#main"><img src="imagenes/flecha_arriba.png" alt=""></a>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
